Eclipse/.metadata/.plugins/org.eclipse.cdt.ui/MileStone1.build.log
15:39:46 **** Incremental Build of configuration Nios II for project MileStone1 ****
make all 
Info: Building ../MileStone1_bsp/
C:/intelFPGA_lite/18.1/nios2eds/bin/gnu/H-x86_64-mingw32/bin/make --no-print-directory -C ../MileStone1_bsp/
Compiling alt_close.c...
nios2-elf-gcc -xc -MP -MMD -c  -I./UCOSII/inc -I./HAL/inc -I. -I./drivers/inc -pipe -D__hal__ -DALT_NO_INSTRUCTION_EMULATION -D__ucosii__    -O0 -g -Wall  -mno-hw-div -mhw-mul -mno-hw-mulx -mgpopt=global   -o obj/HAL/src/alt_close.o HAL/src/alt_close.c
In file included from ./HAL/inc/includes.h:23:0,
                 from ./UCOSII/inc/priv/alt_sem_ucosii.h:45,
                 from ./UCOSII/inc/os/alt_sem.h:75,
                 from ./HAL/inc/priv/alt_file.h:44,
                 from HAL/src/alt_close.c:37:
./UCOSII/inc/ucos_ii.h:1708:2: error: #error "OS_CFG.H, Missing OS_TICKS_PER_SEC: Sets the number of ticks in one second"
 #error  "OS_CFG.H, Missing OS_TICKS_PER_SEC: Sets the number of ticks in one second"
  ^
make[1]: *** [obj/HAL/src/alt_close.o] Error 1
make: *** [../MileStone1_bsp/-recurs-make-lib] Error 2

15:39:46 Build Finished (took 441ms)

